fixed skills section on mobile

--- a/main.css
+++ b/main.css
@@ -233,7 +233,7 @@ nav li button:hover {
 
 .skills li {
 	margin-bottom: 	20px;
-	text-align: justify;
+	text-align: left;
 	padding-left: 20px;
 	padding-right: 20px;
 }
@@ -285,6 +285,7 @@ body {
 	font-size: 20px;
 }
 
+
 h1, h2, h3 {
 	margin-top: 	0;
 	margin-bottom: 	0;
@@ -326,6 +327,10 @@ font-size: 42px;
 
 .skills {
 	margin-top: 0px;
+}
+
+.skills li {
+	text-align: justify;
 }
 
 }
